# SwarmFed-RL

./: .gitignore  INTERVIEW_GUIDE.md  PROJECT_REPORT.md  README.md  environments.yml  pyproject.toml
launch/: swarm_sim.launch.py
scripts/: plot_metrics.py  run_experiment.py  run_full_pipeline.py  run_hard_pipeline.py  run_phase1.py  run_quality_checks.py  run_ros2_experiment.py  run_warmup.py  smoke_ros2_runtime.py
src/swarmfed_rl/: __init__.py  config.py  env.py  experiment.py  p2p.py  plotting.py  ros2_runtime.py  ros2_scaffold.py  ros2_training.py  sac.py  train_phase1.py  utils.py
src/swarmfed_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ros2_runtime.py  test_sac_stability.py
