[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmfed-rl"
version = "0.1.0"
description = "Phase-1 implementation for P2P federated RL with SAC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "tensorboard>=2.15",
  "torch>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
